--- a/index.html
+++ b/index.html
@@ -646,12 +646,12 @@
           ><a href="https://www.viome.com/">www.viome.com</a> |
           <a href="tel:+1-855-958-4663">1-855-958-4663</a></span
         >
-        <ul class="d-flex flex-column flex-md-row text-center gap-3 pt-3">
-          <li>About</li>
-          <li>Products</li>
-          <li>Our Approach</li>
-          <li>Careers</li>
-          <li>Community</li>
+        <ul class="d-flex flex-column flex-md-row text-center gap-3 pt-3 ">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Our Approach</a></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Community</a></li>
         </ul>
         <p>2024 Viome Life Sciences, Inc. All rights reserved.</p>
       </div>
